<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/purple"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/m1"
            android:layout_width="100dp"
            android:layout_height="210dp"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:drawableTop="@drawable/shield_shaded"
            android:text="@string/m1" />



        <TextView
            android:id="@+id/m2"
            android:layout_width="100dp"
            android:layout_height="210dp"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:drawableTop="@drawable/android"
            android:text="@string/m2" />

        <TextView
            android:id="@+id/m3"
            android:layout_width="100dp"
            android:layout_height="210dp"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:drawableTop="@drawable/arrow_repeat"
            android:text="@string/m3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/m4"
            android:layout_width="100dp"
            android:layout_height="210dp"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:drawableTop="@drawable/code_slash"
            android:text="@string/m4" />

        <TextView
            android:id="@+id/m5"
            android:layout_width="100dp"
            android:layout_height="210dp"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:drawableTop="@drawable/filetype_html"
            android:text="@string/m5" />

        <TextView
            android:id="@+id/m6"
            android:layout_width="100dp"
            android:layout_height="210dp"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:drawableTop="@drawable/easel3_fill"
            android:text="@string/m6" />

    </LinearLayout>


</LinearLayout>